# ADT-Lemma-Discovery

./: .gitignore  Dockerfile  README.md  artifact-instructions.md  atom.ml  atomtoz3.ml  auto_build_table4.sh  auto_visualization.sh  bench_reverse.ml  bench_rotate.ml  build_table4.py  customstk1_maximal.json.moti  dune_make.sh  evaluation_tool.py  init.sh  init_clean.sh  log_diff.text  main.ml  murphy.sh  paper.bak  requirement.doc  run_benchmarks.sh  run_benchmarks_long.sh  run_benchmarks_short.sh  t.py  test.sh  test_diff.sh  utils.ml  verify.ml  verify.sh  visualize_prebuilt_result.sh  visualize_running_result.sh  z3aux.ml
abduction/: abducible.ml  abduction.ml  abduction.mli  dune  flatten.ml  run.sh  simplify.ml  z3aux.ml
axiom/: axiomSyn.ml  axiom_syn.ml  dtree.ml  dune  idea.md
axiom_infer/: axiom_syn.ml  dune  elem.ml  pred.ml  utils.ml  vectorRep.ml
axiom_verifier/: labeled_treeb.dfy.text  labeled_treei.dfy.text  list.dfy.text  tree.dfy.text
bench/: bankersq.ml  bankersqueue.ml  batchedqueue.ml  bench_utils.ml  customstack.ml  customstk.ml  dune  leftistheap.ml  leftisthp.ml  main.ml  rbset.ml  redblackset.ml  serialization.ml  show.ml  spec_abd.ml  spec_abd2.ml  spec_abd3.ml  spec_abd4.ml  spec_abd5.ml  spec_bankersq.ml  spec_batchedq.ml  spec_customstk.ml  spec_customstk2.ml  spec_customstk3.ml  spec_leftisthp.ml  spec_rbset.ml  spec_splayhp.ml  spec_stream.ml  spec_trie.ml  spec_unbset.ml  spec_uniquel.ml  splayheap.ml  stream.ml  trie.ml  unbalancedset.ml  uniquelist.ml
bench_buf/: .merlin  bankersqueue.ml  batchedqueue.ml  bench_utils.ml  customstack.ml  leftistheap.ml  redblackset.ml  stream.ml
config/: prebuilt.config  result_table4.config  standard.config  table4.config  test.config
coq_proof/: .#motivation.v  motivation.v  predicates_definition.ml  unb.v
data/: bankersq.ml  bankersq_assertion1.ml  bankersq_assertion2.ml  batchedq.ml  batchedq_assertion1.ml  batchedq_assertion2.ml  bench_customstack.ml  bench_customstack_assertion.ml  customstack_assertion1.ml  customstk.ml  customstk_assertion1.ml  customstk_assertion2.ml  customstk_assertion3.ml  customstk_assertion4.ml  customstk_assertion5.ml  leftisthp.ml  leftisthp_assertion1.ml  leftisthp_assertion2.ml  rbset.ml  rbset_assertion1.ml  rbset_assertion2.ml  splayhp.ml  splayhp_assertion1.ml  splayhp_assertion2.ml  splayhp_assertion3.ml  stream.ml  stream_assertion1.ml  stream_assertion2.ml  stream_assertion3.ml  stream_assertion4.ml  trie.ml  trie_assertion1.ml  trie_assertion2.ml  unbset.ml  unbset_assertion1.ml  unbset_assertion2.ml  unbset_assertion3.ml  unbset_assertion4.ml  uniquel.ml  uniquel_assertion1.ml  (+2 more)
frontend/: Makefile  config.ml  dune
frontend/driver/: frontend.ml  frontend.mli  ztest.cmt
frontend/parsing/: ast_helper.cmt  ast_helper.cmti  ast_iterator.cmt  ast_iterator.cmti  ast_mapper.cmt  attr_helper.cmti  lexer.cmt  lexer.cmti  location.cmt  location.cmti  longident.cmt  parser.cmti  parsetree.cmti  pprintast.cmt  pprintast.cmti  printast.cmt  syntaxerr.cmti
frontend/test/data/: lex.ml
frontend/typing/: .#typeopt.mli  cmi_format.cmt  cmi_format.cmti  ctype.cmt  envaux.cmti  ident.cmti  includeclass.cmt  includeclass.cmti  includecore.cmt  includecore.cmti  includemod.cmt  mtype.cmt  oprint.cmt  oprint.cmti  outcometree.cmti  path.cmti  primitive.cmt  primitive.cmti  printtyp.ml  printtyped.cmti  rec_check.ml  stypes.cmti  subst.cmt  subst.cmti  tast_mapper.cmti  typeclass.cmt  typecore.cmt  typecore.cmti  typecore.ml  typedtreeIter.cmt  typedtreeIter.cmti  typemod.cmt  typetexp.cmt  typetexp.cmti  untypeast.cmti
frontend/utils/: ccomp.cmt  ccomp.cmti  clflags.cmt  clflags.cmti  config.cmti  consistbl.cmt  dune  misc.cmti  misc.ml  numbers.cmti  tbl.cmt  tbl.cmti  terminfo.cmt  terminfo.mli  timings.cmt  warnings.cmt
frontend_bak/: fast.ml
inference/: axiom.ml  axiom.ml.bak  dtree.ml  dune  env.ml  feature.ml  inference.ml  randomgen.ml  sample.ml  single_abd.ml  spec.ml  specabduction.ml
language/: ast.ml  (+17 more)
test/: abduction_test.ml  bench_bankersqueue.ml  bench_batchedqueue.ml  bench_customstack.ml  bench_leftistheap.ml  bench_merge_sort.ml  bench_redblackset.ml  bench_splayheap.ml  bench_stream.ml  bench_unbalancedset.ml  case1_test.ml  dune  frontend.ml  language_test.ml  lex_test.ml  pred_test.ml  spec_abd.ml  spec_infer.ml  utils_test.ml  whole_test.ml
(+330 files in other folders)
