(env
  (dev
    (flags (:standard -w -32 -w -35 -w -27 -w -33 -w -26)))
)
(tests
 (names
 serialization
 ;; spec_customstk2
 spec_customstk3
 ;;spec_customstk
 spec_splayhp
 ;;spec_leftisthp
 spec_unbset
 ;;spec_rbset
 ;;spec_stream
 ;;spec_bankersq
 ;;spec_uniquel
 ;;spec_batchedq
 ;; customstk
 ;; splayhp
 ;; leftisthp
 ;; unbset
 ;; stream
 ;; rbset
 ;; bankersq
 ;; batchedq
 ;; trie
 ;; uniquel
 )
 (libraries ounit2 solver inference frontend)
)
