(env
  (dev
    (flags (:standard -w -32 -w -35 -w -27 -w -33 -w -26)))
)
(tests
 (names
 serialization
 spec_customstk
 spec_splayhp
 spec_leftisthp
 spec_unbset
 spec_rbset
 spec_trie
 spec_stream
 spec_bankersq
 spec_uniquel
 spec_batchedq
 show
 )
 (libraries ounit2 solver inference frontend)
)
