; block warning 26, 27, 32, 6
(env
(dev     (flags (:standard -w +a-4-9-40-41-42-44-45-48-27-32-26-6)))
(release (flags (:standard -w +a-4-9-40-41-42-44-45-48-27-32-26-6))))

(copy_files# utils/*.ml{,i})
(copy_files# parsing/*.ml{,i})
(copy_files# typing/*.ml{,i})
(copy_files# driver/*.ml{,i})

(library
(name frontend)
(wrapped false)
(flags (:standard -principal))
(modules_without_implementation
annot asttypes outcometree parsetree)
(modules
;; UTILS
arg_helper
ccomp
clflags
config
consistbl
identifiable
misc
numbers
strongly_connected_components
tbl
terminfo
timings
warnings

;; TYPING
btype
cmi_format
cmt_format
ctype
datarepr
env
envaux
ident
includeclass
includecore
includemod
mtype
oprint
parmatch
path
predef
primitive
printtyp
printtyped
stypes
subst
tast_mapper
typeclass
typecore
typedecl
typedtree
typedtreeIter
typedtreeMap
typemod
types
typetexp
untypeast
; manual update: mli only files
annot outcometree

;; PARSING
ast_helper
ast_invariants
ast_iterator
ast_mapper
attr_helper
builtin_attributes
docstrings
lexer
location
longident
parse
parser
pprintast
printast
syntaxerr
; manual update: mli only files
asttypes parsetree

;; DRIVER
pparse
frontend
)
)