(tests
 (names language_test whole_test abduction_test pred_test utils_test case1_test
 bench_merge_sort
 bench_unbalancedset
 bench_leftistheap
 bench_customstack
 bench_redblackset
 bench_stream
 bench_batchedqueue
 bench_bankersqueue
 bench_splayheap)
 (libraries abduction axiom ounit2 solver)
)
