(env
  (dev
    (flags (:standard -w -32 -w -35 -w -27 -w -33 -w -26))))
(tests
 (names
  frontend
; language_test
; whole_test
; abduction_test
; pred_test utils_test
; case1_test
; bench_merge_sort
; bench_unbalancedset
; bench_leftistheap
; bench_customstack
; bench_redblackset
; bench_stream
; bench_batchedqueue
; bench_bankersqueue
; bench_splayheap
; spec_infer
)
 (libraries ounit2 solver inference frontend)
)
